[NR-232439] Support all log collector endpoints